--- a/.github/workflows/rm.yaml
+++ b/.github/workflows/rm.yaml
@@ -31,6 +31,6 @@ jobs:
       - name: Call the delete-deployment-preview.sh script
         run: |
           echo "Run script"
-          apt install jq -y
+          sudo apt install jq -y
           chmod +x ./scripts/delete-deployment-preview.sh
           sh ./scripts/delete-deployment-preview.sh ${{ steps.extract_branch.outputs.branch }} apply
