--- a/.github/workflows/rm.yaml
+++ b/.github/workflows/rm.yaml
@@ -29,8 +29,10 @@ jobs:
         id: extract_branch
 
       - name: Call the delete-deployment-preview.sh script
+        env:
+          BRANCH: ${{ steps.extract_branch.outputs.branch }}
         run: |
           echo "Run script"
           sudo apt install jq -y
           chmod +x ./scripts/delete-deployment-preview.sh
-          sh ./scripts/delete-deployment-preview.sh ${{ steps.extract_branch.outputs.branch }} apply
+          sh ./scripts/delete-deployment-preview.sh apply
