--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Start QA SEO AutoTests
 
 on:
   schedule:
-    - cron: "* * * * *"  
+    - cron: "*/1 * * * *"  
   workflow_dispatch:
     inputs:
       environment:
@@ -29,6 +29,7 @@ jobs:
         else
           echo "environment=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
         fi
+        echo "Environment set to ${{ env.environment }}"
 
     - name: QA AutoTests Job
       run: |
