--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
 name: Start QA SEO AutoTests
 
 on:
-  schedule:
-    - cron: "*/5 * * * *"  
+#  schedule:
+#    - cron: "*/5 * * * *"  
   workflow_dispatch:
     inputs:
       environment:
