--- a/.github/workflows/retry.yml
+++ b/.github/workflows/retry.yml
@@ -11,12 +11,7 @@ jobs:
         uses: actions/checkout@v2
         
       - name: Retry command with timeout
-        uses: nick-invision/retry@v2 # Правильне ім'я бібліотеки
-        with:
-          max_attempts: 3
-          timeout_seconds: 5
-          retry_on: error
-          command: |
-            echo 'some command that could potentially fail'
-            docker build -t test:1 .
-            
+        run: |
+          for i in {1..3}; do
+            docker build -t test:1 . && break || sleep 10 || echo "Attempt $i failed";
+          done      
