--- a/.github/workflows/path.yml
+++ b/.github/workflows/path.yml
@@ -7,7 +7,7 @@ on:
         - main
       paths: 
        - 'api/**'
-       - 'cmd/doc-seve/**'
+       - 'cmd/doc-serve/**'
 #        - docker-doc-server
 #      paths-ignore:
 #        - '.github/workflows/**'
