--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
-name: Start QA SEO AutoTests
+name: Web Autotests
 
 on:
   schedule:
-    - cron: "*/5 * * * *"  
+    - cron: "*/5 * * * *"
   workflow_dispatch:
     inputs:
       environment:
@@ -14,29 +14,59 @@ on:
           - prod
           - stage
           - uat
+      test_type:
+        description: 'Select test type (all, funnel, seo, healthcheck)'
+        required: true
+        default: 'all'
+        type: choice
+        options:
+          - all
+          - funnel
+          - seo
+          - healthcheck
 concurrency:
       group: ${{ github.head_ref || github.ref }}
 
 jobs:
   autotests:
-    runs-on: ubuntu-latest
+    runs-on: autotests-runner
     steps:
-    - name: Set default environment if not provided
+    - name: Setup environment vars
       run: |
         if [ -z "${{ github.event.inputs.environment }}" ]; then
           echo "Environment not provided, defaulting to prod"
           echo "environment=prod" >> $GITHUB_ENV
-          echo "Environment set to ${{ env.environment }}"
         else
           echo "environment=${{ github.event.inputs.environment }}" >> $GITHUB_ENV
           echo "Environment set to ${{ github.event.inputs.environment }}"
         fi
-
-    - name: QA AutoTests Job
-      run: |
-        if [ "${{ env.environment }}" = "prod" ]; then
-          echo "Running QA AutoTests for production"
-          echo "Running QA AutoTests for ${{ env.environment }}"
-        else
-          echo "Running QA AutoTests for ${{ env.environment }}"
+        
+        markers=""
+        if [ "${{ github.event.inputs.test_type }}" == "funnel" ]; then
+          markers="ei_funnels or funnels or smoke"
+        elif [ "${{ github.event.inputs.test_type }}" == "seo" ]; then
+          markers="seo"
+        elif [ "${{ github.event.inputs.test_type }}" == "healthcheck" ]; then
+          markers="healthcheck"
         fi
+        
+        if [[ "${{ github.event.inputs.environment }}" == "stage" && markers != "" ]]; then
+            markers="-m \"$markers and not prod_only\""
+        fi
+        
+        echo "markers=$markers" >> $GITHUB_ENV
+
+    
+    - name: QA AutoTests Job - First Run
+      run: |
+        echo ${{ env.markers }}
+        echo ${{ env.environment }}
+        echo "pytest tests/ui/promova_web/ ${{ env.markers }} --app promova_web --env=${{ env.environment }} --tracing=retain-on-failure --testrail --tr-config=testrail-config.cfg --cache-clear"
+
+
+    - name: QA AutoTests Job - Rerun Failed
+      run: |
+        cd /home/ubuntu
+        source venv/bin/activate 
+        cd autotests/Promova-QAAutoTests/ 
+        echo "pytest --last-failed --env=${{ env.environment }} --tracing=retain-on-failure --testrail --tr-config=testrail-config.cfg"
