--- a/.github/workflows/dispatch.yaml
+++ b/.github/workflows/dispatch.yaml
@@ -16,11 +16,11 @@ jobs:
     - name: Get latest commit hash
       id: get_commit
       run: |
-        echo $(git rev-parse HEAD)
+        echo $(git rev-parse HEAD | | cut -c1-7)
         echo "COMMIT_HASH=$(git rev-parse HEAD)" >> $GITHUB_ENV
 
     - name: Get latest commit message
       id: get_message
       run: |
-        echo $(git log -1 --pretty=%B)
+        echo $(git log -1 --pretty=%B | | sed -n '1p' | tr ' ' '-')
         echo "COMMIT_MESSAGE=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
