--- a/.github/workflows/imaginary.yml
+++ b/.github/workflows/imaginary.yml
@@ -36,7 +36,10 @@ jobs:
           cd imaginary
           ls -la
           go mod tidy
-
+            # Логін в Docker Hub
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+        
       - name: Build 
         run: |
           pwd
