--- a/.github/workflows/choice.yml
+++ b/.github/workflows/choice.yml
@@ -20,11 +20,12 @@ jobs:
     if: ${{ github.event.inputs.job_choice == 'job1' || github.event.inputs.job_choice == 'job1+2' }}
     steps:
       - name: Run Job 1
-        run: echo "Running Job 1 with variable: ${{ github.event.inputs.variable }}"
-
+        run: |
+          echo "Running Job 1 with variable: ${{ github.event.inputs.variable }}"
   job2:
     runs-on: ubuntu-latest
     if: ${{ github.event.inputs.job_choice == 'job1+2' }}
     steps:
       - name: Run Job 2
-        run: echo "Running Job 2 with variable: ${{ github.event.inputs.variable }}"
+        run: |
+          echo "Running Job 2 with variable: ${{ github.event.inputs.variable }}"
