--- a/.github/workflows/imaginary_final.yml
+++ b/.github/workflows/imaginary_final.yml
@@ -75,8 +75,12 @@ jobs:
         run: |
           echo "Triggering build job..."
           gh workflow run Build-and-Deploy --field job_choice=build --field variable=${{ github.event.inputs.variable }}
+        env:
+          GH_TOKEN: ${{ github.token }}
       
       - name: Trigger deploy job
         run: |
           echo "Triggering deploy job..."
           gh workflow run Build-and-Deploy --field job_choice=deploy --field variable=${{ github.event.inputs.variable }}
+        env:
+          GH_TOKEN: ${{ github.token }}
