--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,11 +7,26 @@ on:
   
 jobs:
   build:
-    runs-on: promova_backend_1
-    outputs:
-      ecr_pass: ${{ steps.ecr_password.outputs.ecr_pass }}
+    runs-on: ubuntu-latest
     steps:
-      - name: Check out repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
+
+      - name: Build and Test
+        run: echo "Running build and tests..."
+
+      - name: Notify Slack
+        uses: ravsamhq/notify-slack-action@v2
+        if: always()
+        with:
+          status: ${{ job.status }}
+          notification_title: "*{workflow}* in repository *{repo}*"
+          mention_users: "U07AA349N5N"
+          message_format: |
+            {emoji} Workflow *{workflow}* {status_message} in <{repo_url}|{repo}>
+            <{run_url}|View Workflow Run>
+          footer: "Department: Frontend"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
      
 
