--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -28,5 +28,14 @@ jobs:
           footer: "Department: Frontend"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+      - name: Post to a Slack channel
+        uses: slackapi/slack-github-action@v2.0.0
+        with:
+          method: chat.postMessage
+          token: ${{ secrets.SLACK_WEBHOOK_URL }}
+          payload: |
+            channel: "U07AA349N5N"
+            text: "howdy <@channel>!"
      
 
