--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,15 +29,15 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
-      - name: Post to Slack channel
-        id: slack_notify
-        uses: slackapi/slack-github-action@v2.0.0
-        with:
-          method: chat.postMessage
-          token: ${{  secrets.SLACK_WEBHOOK_URL }}
-          payload: |
-            channel: "U07AA349N5N" 
-            text: "Новий коміт у головній гілці! 🚀"
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_CHANNEL: "U07AA349N5N"
+          SLACK_MESSAGE: "test"
+          
+
+        
 
      
 
