--- a/.github/workflows/test_trigger.yml
+++ b/.github/workflows/test_trigger.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Notify on Failure
         if: ${{ failure() && (env.branch_name == 'main' || env.branch_name == 'stage') }}
         run: |
-          echo " test"
+          echo " test--------"
