--- a/.github/workflows/pr_comment.yml
+++ b/.github/workflows/pr_comment.yml
@@ -20,4 +20,5 @@ jobs:
           echo "link=$LINK" >> $GITHUB_OUTPUT
 
       - name: Output extracted link
-        run: echo "The extracted link is: ${{ steps.extract_link.outputs.link }}"
+        run: |
+          echo "The extracted link is: ${{ steps.extract_link.outputs.link }}"
