--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,25 +1,23 @@
-name: escape
+name: Check if last commit was a merge from Dev
 on:
-  workflow_dispatch:
   push:
     branches:
       - main
-  
+
 jobs:
-  build:
+  detect-merge:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-      - name: Escape commit message for JSON
-        id: escaped_commit_message
-        run: echo "message=$(jq -Rs . <<< '${{ github.event.head_commit.message }}')" >> "$GITHUB_ENV"
-        
-      - name: Use escaped commit message
+      - name: Check if last commit was a merge from Dev
         run: |
-          echo "Escaped message: ${{ env.message }}"
-          
-
+          git fetch origin Dev --depth=1
+          if git log --merges -n 1 --format=%P | grep "$(git rev-parse origin/Dev)"; then
+            echo "Detected merge from Dev to Main"
+            exit 0
+          else
+            echo "No recent merge from Dev"
+            exit 1
+          fi
         
 
      
