--- a/.github/workflows/synk.yml
+++ b/.github/workflows/synk.yml
@@ -1,12 +1,13 @@
 name: Sync Main branch to Dev
 
 on:
-  push:
-    branches:
-      - 'main'
+  schedule:
+    - cron: '0 7 * * *'  # 9:00 AM Kyiv
+  workflow_dispatch:
+
 permissions:
   contents: write
-  
+
 jobs:
   sync_dev_uat:
     runs-on: ubuntu-latest
@@ -14,7 +15,14 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-      
+      with:
+        fetch-depth: 0  # потрібно для повного git історії
+
+    - name: Set up Git config
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+
     - name: Merge main into dev
       run: |
         # Переключитися на dev (або створити, якщо немає)
