--- a/.github/workflows/synk.yml
+++ b/.github/workflows/synk.yml
@@ -1,8 +1,9 @@
 name: Sync Main branch to Dev
 
 on:
-  schedule:
-    - cron: '0 7 * * *'  # 9:00 AM Kyiv
+  push:
+    branches:
+      - 'main'
   workflow_dispatch:
 
 permissions:
