--- a/.github/workflows/synk.yml
+++ b/.github/workflows/synk.yml
@@ -15,10 +15,10 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Merge staging -> uat
-      uses: devmasx/merge-branch@main
+      uses: devmasx/merge-branch@master
       with:
         type: now
         from_branch: main
