--- a/.github/workflows/synk.yml
+++ b/.github/workflows/synk.yml
@@ -4,23 +4,21 @@ on:
   push:
     branches:
       - 'main'
-  workflow_dispatch:
-
 permissions:
   contents: write
-
+  
 jobs:
   sync_dev_uat:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
 
-    - name: Merge staging -> uat
-      uses: devmasx/merge-branch@master
+    - name: Merge main -> develop
+      uses: devmasx/merge-branch@6ec8363d74aad4f1615d1234ae1908b4185c4313
       with:
         type: now
         from_branch: main
         target_branch: dev
-        github_token: ${{ secrets.GH_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
